tests/fixtures/invalid/unknown_return_type.torel
unit fixtures.unknown_return_type;

export proc main() -> Potato {
    return Exit.ok;
}
